name:                fluorine
version:             0.1
synopsis:            FRP based on purescript-halogen
description:
  frp

homepage:            https://github.com/jeffreyrosenbluth/fluorine
bug-reports:         https://github.com/jeffreyrosenbluth/fluorine/issues
license:             BSD3
license-file:        LICENSE
author:              Jeffrey Rosenbluth
maintainer:          jeffrey.rosenbluth@gmail.com
copyright:           2015 Jeffrey Rosenbluth
category:            FRP
stability:           Experimental
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall -rtsopts -O2
  exposed-modules:     Fluorine,
                       Fluorine.Signal
  -- other-modules:

  build-depends:       base >=4.5 && < 5,
                       profunctors >=5.1.1 && < 6

  hs-source-dirs:      src
  default-language:    Haskell2010
