name:                fluorine
version:             0.1
synopsis:            FRP based on purescript-halogen
description:         frp

homepage:            https://github.com/jeffreyrosenbluth/fluorine
bug-reports:         https://github.com/jeffreyrosenbluth/fluorine/issues
license:             BSD3
license-file:        LICENSE
author:              Jeffrey Rosenbluth
maintainer:          jeffrey.rosenbluth@gmail.com
copyright:           2015 Jeffrey Rosenbluth
category:            FRP
stability:           Experimental
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall -rtsopts -O2
  exposed-modules:     Fluorine
                       Fluorine.Signal
                       Fluorine.HTML
                       Fluorine.Component
                       Fluorine.HTML.Attributes
                       Fluorine.HTML.Events
  other-modules:       Fluorine.HTML.Events.Types
                       Fluorine.HTML.Events.Handler
                       Fluorine.HTML.Events.Monad
                       Fluorine.HTML.Events.Forms

  build-depends:       base >=4.5 && < 5,
                       profunctors >=5.1.1 && < 6,
                       mtl >=2.1 && < 3

  hs-source-dirs:      src
  default-language:    Haskell2010
